.story and .images fixed. damn copyright in footer wont align corrctly

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -88,6 +88,10 @@ main {
   color: black;
 }
 
+#monument {
+  margin-left: 30px;
+}
+
 #phish {
   display: flex;
   text-align: left;
@@ -137,9 +141,9 @@ main {
   height: 100%;
   flex-grow: 2;
   flex-shrink: 2;
-  flex-flow: column wrap;
   margin-right: 30px;
-  justify-content: flex-start;
+  justify-content: flex-end;
+  flex-wrap: wrap;
 }
 
 /*main medium column middle*/
@@ -162,7 +166,6 @@ main {
   height: 100%;
   flex-grow: 3;
   flex-shrink: 3;
-  flex-direction: column;
   margin-right: 30px;
   justify-content: flex-start;
 }
@@ -210,35 +213,41 @@ footer {
   display: flex;
   width: 100%;
   min-width: 200px;
-  height: 100px;
-  align-items: center;
+  height: 200px;
+  margin: auto;
+  color: black;
+  background-color: hsl(169,62%,51%);
+  align-items:center;
+  justify-content: center;
   flex-grow: 2;
   flex-shrink: 3;
   font-family: Verdana;
-  font-size: 14px;
+  font-size: 12px;
   font-weight: bold;
+  font-family: Verdana;
   border-bottom-style: solid;
   border-bottom: 3;
   -webkit-box-shadow: 0 10px 6px -6px #777;
 	-moz-box-shadow: 0 10px 6px -6px #777;
 	box-shadow: 0 10px 6px -6px #777;
+
 }
 
-.nav {
-  margin-left: 30px;
-  align-items: center;
-  justify-content: center;
+#logofooter {
+  color: white;
+  border-right: 2px solid white;
+  font-family: Georgia;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 0px 10px 10px 10px;
+
 }
 
 .footnav {
-  align-content:flex-end;
-  justify-content: flex-start;
-  flex-wrap: row nowrap;
-  min-width: 350px;
-  margin-right: 30px;
+  padding: 0px 10px 10px 10px;
 }
 
-#mtfooter {
-  color: white;
-
+#copyright {
+  justify-content: center;
+  align-self: center;
 }
